--- a/index/templates/reset-password.html
+++ b/index/templates/reset-password.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-12 col-lg-4 dope-wrapper">
+  <div class="col-12 dope-wrapper">
     {% if errors.general %}
       <p>The password reset link was invalid, possibly because it has already been used. Please request a new
         <a class="password-link" href="/?view=password">password reset</a>.
