--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -205,9 +205,9 @@
                           </span>
                         </a>
                         {% if results.view == "playlist" %}
-                          <a class="btn-dope showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="Episodes of {{ episode.podcast.title }}">
+                          <a class="btn-dope showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
                             <span class="active">
-                              Episodes
+                              Show
                             </span>
                             <span>
                               <i class="fas fa-bars"></i>
@@ -221,7 +221,7 @@
                             <input type="hidden" name="signature" value="{{ episode.signature }}" />
                             <button class="btn-dope" type="submit" title="Add to Playlist">
                               <span class="active">
-                                Add to Playlist
+                                Add
                               </span>
                               <span>
                                 <i class="fas fa-plus"></i>
