--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -234,7 +234,8 @@
     </p>
     {% if results.pages %}
       <p>
-        (It's a bug ¯\_(ツ)_/¯)
+        You found a bug
+        <i class="fas fa-trophy"></i>
       </p>
     {% endif %}
   </div>
