--- a/index/static/style.css
+++ b/index/static/style.css
@@ -80,8 +80,8 @@ form {
   background: rgb(0, 191, 165);
 }
 .btn-dope > * {
-  min-width: 26px;
-  height: 26px;
+  min-width: 27px;
+  height: 27px;
   padding: 3px;
 }
 .dope-toggle {
@@ -163,6 +163,7 @@ form {
   transition: all .25s ease-in-out;
 }
 .dope-field {
+  font-size: 14px;
   margin-bottom: 10px;
   width: 100%;
   padding: 3px 6px;
@@ -185,9 +186,9 @@ form {
   margin: auto;
   padding: 20px 10px;
   text-align: center;
-  max-width: 375px;
+  max-width: 500px;
 }
-.dope-wrapper form {
+.dope-wrapper > form {
   margin: auto;
   max-width: 275px;
 }
@@ -240,25 +241,24 @@ form {
   padding: 0 20px;
 }
 #splash {
-  padding: 0 0 50px;
+  padding: 0 0 20px;
   min-height: 320px;
 }
-.slick-listen {
-  max-width: 500px;
-  margin: auto;
+#splash h1 {
+  margin-bottom: 20px;
 }
-.slick-listen h1,
-.slick-listen h2 {
+#splash .dope-result h1,
+#splash .dope-result h2 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.slick-listen h1 {
+#splash .dope-result h1 {
   font-size: 1.5em;
   margin-bottom: 4px;
   height: 30px;
 }
-.slick-listen h2 {
+#splash .dope-result h2 {
   font-size: 1.25em;
   margin-bottom: 0;
   height: 26px;
@@ -296,8 +296,11 @@ form {
   display: inline-block;
 }
 #footer p {
-  font-size: 14px;
-  margin: 0;
+  font-size: 12px;
+}
+#footer .dope-wrapper {
+  padding: 10px;
+  max-width: 320px;
 }
 #dopebar-r > * {
   float: right;
@@ -320,11 +323,10 @@ form {
   border-bottom-right-radius: .25rem;
 }
 #dopebar-collapse ul li {
-  display: list-item;
   margin: 10px 0;
 }
 .dope-link  {
-  padding: 5px;
+  padding: 5px 10px;
   cursor: pointer;
   display: inline-block;
   font-weight: 600;
@@ -631,6 +633,7 @@ form {
 
 /* DOPE-RESULT */
 .dope-result {
+  text-align: initial;
   outline: none;
   padding: 10px 10px 0;
 }
@@ -681,8 +684,8 @@ form {
 .previous .dope-result:not(:first-of-type) {
   border-top: 2px solid rgb(0, 191, 165);
 }
-#splash img,
-.charts img {
+#splash .dope-result img,
+.charts .dope-result img {
   margin-left: 5px;
   float: right;
 }
@@ -698,29 +701,28 @@ form {
   padding: 5px;
   border: 2px solid rgb(0, 191, 165);
 }
-.charts h1,
-.charts h2 {
+.charts .dope-result h1,
+.charts .dope-result h2 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.charts h1 {
+.charts .dope-result h1 {
   font-size: 16px;
-  height: 20px;
   margin-bottom: 4px;
 }
-.charts h2 {
+.charts .dope-result h2 {
   margin-bottom: 0;
   font-size: 14px;
   height: 16px;
 }
 
 /* LAST PLAYED */
-.previous img {
+.previous .dope-result img {
   float: left;
   margin-right: 5px;
 }
-.previous .result-length {
+.previous .dope-result .result-length {
   position: absolute;
   font-size: 1em;
   font-weight: 400;
@@ -730,18 +732,17 @@ form {
   padding: 0 4px;
   background: rgba(0, 0, 0, .5);
 }
-.previous h1,
-.previous h2 {
+.previous .dope-result h1,
+.previous .dope-result h2 {
   margin-bottom: 4px;
   overflow: hidden;
 }
-.previous h1 {
+.previous .dope-result h1 {
   font-size: 16px;
-  height: 20px;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-.previous h2 {
+.previous .dope-result h2 {
   height: 32px;
   font-size: 14px;
 }
@@ -796,11 +797,6 @@ form {
 .selectable.selected .select {
   background: rgb(0, 191, 165);
   color: #fff;
-}
-
-/* SETTINGS */
-.settings-collapse {
-  padding: 10px;
 }
 
 /* PLAYER */
@@ -947,76 +943,76 @@ form {
 }
 .button-loading {
   position: relative;
-  width: 63px;
+  width: 65px;
   height: 26px;
 }
 .loading-a-1 {
-  left: 3px;
+  left: 4px;
   animation: fade 2s ease-in .45s infinite;
   -webkit-animation: fade 2s ease-in .45s infinite;
 }
 .loading-a-2 {
-  left: 11px;
+  left: 12px;
   animation: fade 2s ease-in .3s infinite;
   -webkit-animation: fade 2s ease-in .3s infinite;
 }
 .loading-a-3 {
-  left: 19px;
+  left: 20px;
   animation: fade 2s ease-in .15s infinite;
   -webkit-animation: fade 2s ease-in .15s infinite;
 }
 .loading-a-4 {
-  left: 27px;
+  left: 28px;
   animation: fade 2s ease-in infinite;
   -webkit-animation: fade 2s ease-in infinite;
 }
 .loading-a-5 {
-  left: 35px;
+  left: 36px;
   animation: fade 2s ease-in .15s infinite;
   -webkit-animation: fade 2s ease-in .15s infinite;
 }
 .loading-a-6 {
-  left: 43px;
+  left: 44px;
   animation: fade 2s ease-in .3s infinite;
   -webkit-animation: fade 2s ease-in .3s infinite;
 }
 .loading-a-7 {
-  left: 51px;
+  left: 52px;
   animation: fade 2s ease-in .45s infinite;
   -webkit-animation: fade 2s ease-in .45s infinite;
 }
 .loading-b-1 {
-  left: 3px;
+  left: 4px;
   animation: fade 2s ease-in 1.45s infinite;
   -webkit-animation: fade 2s ease-in 1.45s infinite;
 }
 .loading-b-2 {
-  left: 11px;
+  left: 12px;
   animation: fade 2s ease-in 1.3s infinite;
   -webkit-animation: fade 2s ease-in 1.3s infinite;
 }
 .loading-b-3 {
-  left: 19px;
+  left: 20px;
   animation: fade 2s ease-in 1.15s infinite;
   -webkit-animation: fade 2s ease-in 1.15s infinite;
 }
 .loading-b-4 {
-  left: 27px;
+  left: 28px;
   animation: fade 2s ease-in 1s infinite;
   -webkit-animation: fade 2s ease-in 1s infinite;
 }
 .loading-b-5 {
-  left: 35px;
+  left: 36px;
   animation: fade 2s ease-in 1.15s infinite;
   -webkit-animation: fade 2s ease-in 1.15s infinite;
 }
 .loading-b-6 {
-  left: 43px;
+  left: 44px;
   animation: fade 2s ease-in 1.3s infinite;
   -webkit-animation: fade 2s ease-in 1.3s infinite;
 }
 .loading-b-7 {
-  left: 51px;
+  left: 52px;
   animation: fade 2s ease-in 1.45s infinite;
   -webkit-animation: fade 2s ease-in 1.45s infinite;
 }
