--- a/index/templates/confirm-email.html
+++ b/index/templates/confirm-email.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-12 col-lg-4 dope-wrapper">
+  <div class="col-12 dope-wrapper">
     <p>Your email is now confirmed.</p>
     <p>
       <a class="login-link" href="/?view=login">
