--- a/index/templates/confirm-email.min.html
+++ b/index/templates/confirm-email.min.html
@@ -1,1 +1,1 @@
-<div class="row"><div class="col-12 col-lg-4 dope-wrapper"><p>Your email is now confirmed.</p><p><a class="login-link" href="/?view=login">Login</a></p></div></div>
+<div class="row"><div class="col-12 dope-wrapper"><p>Your email is now confirmed.</p><p><a class="login-link" href="/?view=login">Login</a></p></div></div>
