--- a/index/templates/listen.html
+++ b/index/templates/listen.html
@@ -128,9 +128,9 @@
             </span>
           </a>
           <a class="btn-dope showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}"
-            title="Episodes of {{ episode.podcast.title }}">
+            title="{{ episode.podcast.title }}">
             <span class="active">
-              Episodes
+              Show
             </span>
             <span>
               <i class="fas fa-bars"></i>
@@ -143,7 +143,7 @@
             <input type="hidden" name="signature" value="{{ episode.signature }}" />
             <button class="btn-dope" type="submit" title="Add to Playlist">
               <span class="active">
-                Add to Playlist
+                Add
               </span>
             </button>
           </form>
