--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -1,10 +1,6 @@
 {% if results.view == "splash" %}
   {% if errors or message %}
-    <div class="row color-3">
-      <div class="col-12 errors">
-        {% include "errors.min.html" %}
-      </div>
-    </div>
+    {% include "errors.min.html" %}
   {% endif %}
   <div class="row">
     <div class="col-12" id="splash">
@@ -13,10 +9,10 @@
           <h1>
             Listen
           </h1>
+          {% with previous as results %}
+            {% include "listen.min.html" %}
+          {% endwith %}
         </div>
-        {% with previous as results %}
-          {% include "listen.min.html" %}
-        {% endwith %}
       </div>
       <div class="collapse fade login-collapse{% if view == 'login' %} show{% endif %}" id="login-collapse">
         <div class="dope-wrapper">
@@ -48,12 +44,12 @@
               </div>
             </div>
             <div class="form-row">
-              <div class="col px-0">
+              <div class="col-6 px-0">
                 <a class="password-link" href="/?view=password">
                   Forgot Password?
                 </a>
               </div>
-              <div class="col px-0">
+              <div class="col-6 px-0">
                 <label class="dope-check-label">
                   <input class="dope-check" type="checkbox" name="remember" id="remember">
                   <span>
@@ -62,6 +58,13 @@
                     Remember me
                   </p>
                 </label>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-12 dope-form-group">
+                <p>
+                  
+                </p>
               </div>
             </div>
           </form>
@@ -143,25 +146,25 @@
           Sign up now to subscribe to all your favorite podcasts and to create a personal playlist.
         </p>
         <div class="dope-buttons dope-buttons-c">
-            <a class="btn-dope login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="{% if view == 'login' %}true{% else %}false{% endif %}"
-              aria-controls="login-collapse" title="Login">
-              <span class="active">
-                Login
-              </span>
-              <span class="exp-icon">
-                <i class="fas fa-sign-in-alt"></i>
-              </span>
-            </a>
-            <a class="btn-dope signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="{% if view == 'signup' %}true{% else %}false{% endif %}"
-              aria-controls="signup-collapse" title="Signup">
-              <span class="active">
-                Signup
-              </span>
-              <span class="exp-icon">
-                <i class="fas fa-user-plus"></i>
-              </span>
-            </a>
-          </div>
+          <a class="btn-dope login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="{% if view == 'login' %}true{% else %}false{% endif %}"
+            aria-controls="login-collapse" title="Login">
+            <span class="active">
+              Login
+            </span>
+            <span class="exp-icon">
+              <i class="fas fa-sign-in-alt"></i>
+            </span>
+          </a>
+          <a class="btn-dope signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="{% if view == 'signup' %}true{% else %}false{% endif %}"
+            aria-controls="signup-collapse" title="Signup">
+            <span class="active">
+              Signup
+            </span>
+            <span class="exp-icon">
+              <i class="fas fa-user-plus"></i>
+            </span>
+          </a>
+        </div>
         <div class="dope-buttons dope-buttons-c">
           <a class="privacy-link" href="{% url 'privacy' %}">
             Privacy
@@ -191,6 +194,15 @@
             </span>
           </button>
         </div>
+        <!--<form class="tryout-form" method="POST" action="{% url 'tryout' %}">
+          <div class="dope-buttons dope-buttons-c">
+            <button type="submit" class="btn-dope">
+              <span class="active">
+                Tryout
+              </span>
+            </button>
+          </div>
+        </form>-->
       </div>
     </div>
   </div>
@@ -203,11 +215,7 @@
   </div>
 {% elif results.view == "dashboard" %}
   {% if errors or message %}
-    <div class="row color-3">
-      <div class="col-12 errors">
-        {% include "errors.min.html" %}
-      </div>
-    </div>
+    {% include "errors.min.html" %}
   {% endif %}
   <div class="row">
     <div class="col-12 col-lg-6">
